<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sportsImageDetail"
        android:adjustViewBounds="true"
        />

    <TextView
        android:id="@+id/titleDetail"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sportsImageDetail"
        android:padding="16dp"
        android:text="@string/title_placeholder"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/newsTitleDetail"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sportsImageDetail"
        android:padding="16dp"
        android:text="@string/news_placeholder"
        android:textColor="?android:textColorSecondary" />

    <TextView
        android:id="@+id/subTitleDetail"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newsTitleDetail"
        android:padding="16dp"
        android:text="@string/generic_text" />

    </RelativeLayout>

</ScrollView>
