<?xml version="1.0" encoding="utf-8"?>

<!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_toolbar"
        android:layout_marginTop="8dp"
        android:gravity="center"

        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/login_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/go_to_login"
            android:textColor="#4A4F80" />

        <Button
            android:id="@+id/category_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:onClick="launchCategoryActivity"
            android:text="@string/categories"
            android:textColor="#4A4F80" />

        <Button
            android:id="@+id/reg_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:onClick="launchRegisterActivity"
            android:text="@string/signup_register"
            android:textColor="#4A4F80" />

    </LinearLayout>


    <!--Container for contents of drawer - use NavigationView to make configuration easier. android:layout_below="@id/layout_linear" -->

   <android.support.v7.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
        android:layout_below="@+id/layout_linear"
       android:scrollbars="vertical"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin"
       app:layout_constraintBottom_toBottomOf="parent"
       tools:layout_editor_absoluteX="8dp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetSports"
        android:src="@drawable/ic_reset"
        android:tint="@android:color/white" />

</RelativeLayout>
